created form for contact page

--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact</title>
+  <title>Zimtekule-Contact</title>
 </head>
 
 <body>
-
+  <form>
+    <h3>Contact Us</h3>
+    <label>Name</label>
+    <input type="text" label="Name" />
+    <label>Email</label>
+    <input type="email" label="Email" />
+    <label>Message</label>
+    <input type="text" label="Leave Your Message..." />
+  </form>
 </body>
 
 </html>
