--- a/farming.html
+++ b/farming.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-
+  <section>
+    <div>
+      <h1>Agriculture</h1>
+      <p>Farming is a good thing. We have been farming for more than 30 years</p>
+    </div>
+    <div>
+      <img />
+    </div>
+  </section>
 </body>
 
 </html>
