added some html text for breeding file

--- a/breeding.html
+++ b/breeding.html
@@ -8,7 +8,19 @@
 </head>
 
 <body>
-
+  <h1>Breeding</h1>
+  <section>
+    <h3>Cattle Breeding</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem libero vel expedita accusantium! Ab,
+      tempore amet, voluptas a itaque sed architecto commodi, perspiciatis quaerat animi id rerum assumenda at
+      recusandae?</p>
+  </section>
+  <section>
+    <h3>Goat Fattening Project</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit rerum nemo culpa dolorum sapiente quam aperiam
+      consequatur veniam facere facilis reprehenderit blanditiis, tempora, expedita praesentium quod? Impedit
+      dignissimos aut a.</p>
+  </section>
 </body>
 
 </html>
