Linked the script file

--- a/breeding.html
+++ b/breeding.html
@@ -21,6 +21,7 @@
       consequatur veniam facere facilis reprehenderit blanditiis, tempora, expedita praesentium quod? Impedit
       dignissimos aut a.</p>
   </section>
+  <script src="static/scipt.js"></script>
 </body>
 
 </html>
