--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <label>Message</label>
     <input type="text" label="Leave Your Message..." />
   </form>
+  <script src="static/scipt.js"></script>
 </body>
 
 </html>
