added page content structures

--- a/about.html
+++ b/about.html
@@ -8,7 +8,23 @@
 </head>
 
 <body>
-
+  <navbar></navbar>
+  <section>
+    <h3></h3>
+    <img src="" alt="">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam delectus cum distinctio, aut animi suscipit
+      deserunt! Saepe doloremque optio voluptatem eaque incidunt iusto! Eligendi quos ex maiores tenetur a voluptate.
+    </p>
+  </section>
+  <section>
+    <h1></h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quod pariatur vel deleniti soluta numquam odio
+      fugit ipsum est quidem tempora, harum mollitia nemo voluptates deserunt non autem cupiditate neque quas ipsa.
+      Expedita voluptas ut molestiae placeat sint at? Voluptatum deserunt voluptas iure corporis ipsam est! Odio cumque
+      rem explicabo!</p>
+    <img src="" alt="">
+  </section>
+  <footer></footer>
   <script src="static/scipt.js"></script>
 </body>
 
