--- a/breeding.html
+++ b/breeding.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <navbar></navbar>
   <h1>Breeding</h1>
   <section>
     <h3>Cattle Breeding</h3>
@@ -21,6 +22,8 @@
       consequatur veniam facere facilis reprehenderit blanditiis, tempora, expedita praesentium quod? Impedit
       dignissimos aut a.</p>
   </section>
+  <footer></footer>
+
   <script src="static/scipt.js"></script>
 </body>
 
