--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <navbar></navbar>
   <form>
     <h3>Contact Us</h3>
     <label>Name</label>
@@ -17,6 +18,7 @@
     <label>Message</label>
     <input type="text" label="Leave Your Message..." />
   </form>
+  <footer></footer>
   <script src="static/scipt.js"></script>
 </body>
 
