--- a/farming.html
+++ b/farming.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <navbar></navbar>
   <section>
     <div>
       <h1>Agriculture</h1>
@@ -17,6 +18,7 @@
       <img />
     </div>
   </section>
+  <footer></footer>
   <script src="static/scipt.js"></script>
 </body>
 
