--- a/poultry.html
+++ b/poultry.html
@@ -8,8 +8,22 @@
 </head>
 
 <body>
-  <img />
-
+  <navbar></navbar>
+  <section>
+    <img src="" alt="">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt libero, reprehenderit earum quibusdam inventore
+      odio officia nobis cupiditate sed sunt nihil! Natus architecto rem atque expedita, rerum aliquid quas
+      reprehenderit.<20></20>
+    </p>
+  </section>
+  <section>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim excepturi magni repudiandae pariatur laborum
+      repellendus quisquam nam dolorum perferendis eveniet impedit voluptate blanditiis animi architecto voluptatum,
+      tempore sit voluptas voluptatibus!<20></20>
+    </p>
+    <img src="" alt="">
+  </section>
+  <footer></footer>
   <script src="static/scipt.js"></script>
 </body>
 
